--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,12 @@ img {
 }
 
 header {
-    background-color:#FEFAE0;
+    background-color:#606C38;
     text-align: center;
     padding: 10px 0;
-    margin: 10px;
+    margin: 0;
+    position:relative;
+    width:100%
 }
 
 nav > ul {
@@ -50,10 +52,22 @@ nav > ul > li > a:active {
 }
 
 #hero {
-    background-color: #FEFAE0;
+    background-color: #606C38;
     padding: 20px 0;
     display: inline-block;
     width: 100%;
+}
+
+#hero span {
+    display: block;
+}
+
+#hero h1 {
+    text-align: center;
+}
+
+#hero p {
+    text-align: center;
 }
 
 body {
@@ -103,12 +117,121 @@ a:active {
 }
 
 .footer{
-    background-color:#FEFAE0;
+    background-color:#606C38;
     padding: 10px;
     margin: 10px;
     text-align: center;
     }
 
+#linkedin {
+    text-align:center;
+}
+
 .row {
     margin: 25px 0;
 }
+
+[class*="col-"] {
+    float:left;
+    padding: 10px;
+}
+
+.row::after {
+    content: "";
+    clear: both;
+    display:table;
+}
+
+.button {
+    display:inline-block;
+    background-color:#BC6C25;
+    color: black;
+    font-weight:400;
+    text-decoration: none;
+    padding: 10px;
+    border-radius: 3px;
+    border-bottom: 2px solid #BC6C25;
+    transition: 0.2s opacity;
+}
+ .button:visited {
+    color: #dda15e;
+ }
+
+ .button:hover {
+    color: #dda15e;
+    opacity: 0.8;
+    text-decoration: none;
+ }
+
+ #about h1 {
+    text-align: center;
+ }
+
+ .berlin_illustration{
+    width: 100%;
+    max-width:100%;
+    height: auto;
+ }
+
+ #about-picture{
+    display: grid;
+    place-items: center;
+ }
+
+
+/* animation */
+@keyframes color-change {
+    from {fill: #edc655;}
+    to {fill: #f76414;}
+}
+.sun {
+    animation: 4s color-change infinite alternate linear;
+}
+
+/* screen sizes */
+
+/*medium screens*/
+@media only screen and (min-width:640px) {
+    header{
+        text-align:unset;
+        padding: 20px 0 13px;
+    }
+    nav {
+        width: auto;
+        float: right;
+        margin-top: 4px;
+    }
+    .col-md-6 {
+        width:50%;  
+    }
+}
+
+/*large screens*/
+@media only screen and (min-width:1024px) {
+    .col-lg-7 {
+        width:60%;
+    }
+    .col-lg-5 {
+        width:40%;
+    }
+    .container {
+        max-width: 1200px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+/*x large screens*/
+@media only screen and (min-width:1440px) {
+    .col-xl-4{
+        width: 50%;
+        float: left;
+    }
+    .container {
+        max-width: 1850px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+
