--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,7 @@ a:active {
     transition: 0.2s opacity;
 }
  .button:visited {
-    color: #dda15e;
+    color: #606C38;
  }
 
  .button:hover {
